refactor ni_nfvo: separate spec, indicate required fields, update APIs documentation, change base path previously, item (such as sfcr) is used for post request. But item include ID, which is discarded when input with post request. Thus a separated item_spec is used for port request. prev, all fields are set to optional. Now required fields are correctly checked. prev, base path is /v2, now remove /v2 to be consistent with ni_mon rename nfvo_client to ni_nfvo_client to consistent with ni_mon_client naming
