# ni_nfvo/controllers/route_controller.py
@@ -3,9 +3,9 @@ import datetime
 import six
 from threading import Timer
 
-from ni_nfvo.models.body import Body  # noqa: E501
 from ni_nfvo.models.route import Route  # noqa: E501
-from ni_nfvo.models.route_update import RouteUpdate  # noqa: E501
+from ni_nfvo.models.route_spec import RouteSpec  # noqa: E501
+from ni_nfvo.models.route_update_spec import RouteUpdateSpec  # noqa: E501
 from ni_nfvo import util
 
 from ni_nfvo.backend_clients.sfc import create_sfc, delete_sfc, update_sfc
@@ -39,36 +39,43 @@ def get_routes():  # noqa: E501
     return db.get_all_routes()
 
 
-def set_route(body):  # noqa: E501
-    """Route a request via the provided route. Return route id if success (which also means input route id is ommitted).
+def set_route(route_spec):  # noqa: E501
+    """Route a request via the provided route. Return route ID if success.
 
      # noqa: E501
 
-    :param body: Route information including SFCR ID and vnf instance ids.
-    :type body: dict | bytes
+    :param route_spec: Route information including SFCR ID and vnf instance ids.
+    :type route_spec: dict | bytes
 
     :rtype: str
     """
     if connexion.request.is_json:
-        body = Route.from_dict(connexion.request.get_json())  # noqa: E501
-    route_id = create_sfc(body.sfc_name, body.sfcr_ids, body.vnf_instance_ids, body.is_symmetric)
-    body.id = route_id
-    db.insert_route(body)
+        route_spec = RouteSpec.from_dict(connexion.request.get_json())  # noqa: E501
+
+    route_id = create_sfc(route_spec.sfc_name,
+                          route_spec.sfcr_ids,
+                          route_spec.vnf_instance_ids,
+                          route_spec.is_symmetric)
+
+    route = Route.from_dict(route_spec.to_dict())
+    route.id = route_id
+    db.insert_route(route)
 
     return route_id
 
-def update_route(id, body):  # noqa: E501
-    """Update a route path.
+
+def update_route(id, route_update_spec):  # noqa: E501
+    """Update a new route path or new sfcrs.
 
      # noqa: E501
 
     :param id: route id
     :type id: str
-    :param body: Route Update info.
-    :type body: dict | bytes
+    :param route_update_spec: Route Update info.
+    :type route_update_spec: dict | bytes
 
     :rtype: str
     """
     if connexion.request.is_json:
-        body = RouteUpdate.from_dict(connexion.request.get_json())  # noqa: E501
-    return update_sfc(id, body.sfcr_ids, body.vnf_instance_ids)
+        route_update_spec = RouteUpdateSpec.from_dict(connexion.request.get_json())  # noqa: E501
+    return update_sfc(id, route_update_spec.sfcr_ids, route_update_spec.vnf_instance_ids)
