# ni_nfvo/controllers/sfcr_controller.py
@@ -5,27 +5,32 @@ import time
 import uuid
 
 from ni_nfvo.models.sfcr import SFCR  # noqa: E501
+from ni_nfvo.models.sfcr_spec import SFCRSpec  # noqa: E501
 from ni_nfvo.database import db
 from ni_nfvo import util
 
 from ni_nfvo.backend_clients.sfc import create_flow_classifier, delete_flow_classifier
 
 
-def add_sfcr(body):  # noqa: E501
-    """Add new SFC request.
+def add_sfcr(sfcr_spec):  # noqa: E501
+    """Add new SFC request. return sfcr ID if success
 
      # noqa: E501
 
-    :param body: SFC request object to be added.
-    :type body: dict | bytes
+    :param sfcr_spec: SFC request object to be added.
+    :type sfcr_spec: dict | bytes
 
     :rtype: str
     """
     if connexion.request.is_json:
-        body = SFCR.from_dict(connexion.request.get_json())  # noqa: E501
-        flow_classifier_id = create_flow_classifier(body)
-        body.id = flow_classifier_id
-        db.insert_sfcr(body)
+        sfcr_spec = SFCRSpec.from_dict(connexion.request.get_json())  # noqa: E501
+        sfcr = SFCR.from_dict(sfcr_spec.to_dict())
+        sfcr.arrivaltime = datetime.datetime.now()
+
+        flow_classifier_id = create_flow_classifier(sfcr_spec)
+
+        sfcr.id = flow_classifier_id
+        db.insert_sfcr(sfcr)
 
         return flow_classifier_id
 
