# ni_nfvo/models/__init__.py
@@ -3,7 +3,9 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from ni_nfvo.models.body import Body
 from ni_nfvo.models.route import Route
-from ni_nfvo.models.route_update import RouteUpdate
+from ni_nfvo.models.route_spec import RouteSpec
+from ni_nfvo.models.route_update_spec import RouteUpdateSpec
 from ni_nfvo.models.sfcr import SFCR
+from ni_nfvo.models.sfcr_spec import SFCRSpec
+from ni_nfvo.models.vnf_spec import VNFSpec
